--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -123,25 +123,11 @@ table(activity$weekday)
 2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.
 
 ```{r}
-
-
-activity.interval.wday<-aggregate(steps~interval,
-                                  data=activity[activity$weekday=="weekday",],
+activity.interval.w<-aggregate(steps~interval+weekday,
+                                  data=activity,
                                   mean,na.rm=TRUE)
-
-activity.interval.wend<-aggregate(steps~interval,
-                                  data=activity[activity$weekday=="weekend",],
-                                  mean,na.rm=TRUE)
-
-
-par(mfrow=c(2,1),mar=c(4,4,2,1))
-
-with(activity.interval.wday,
-     plot(y=steps ,x=interval ,type = "l", 
-          ylab = "Number of steps",main="Weekday",col="steelblue"))
-with(activity.interval.wend,
-     plot(y=steps ,x=interval ,type = "l",xlab = "Interval", 
-          ylab = "Number of steps",main="Weekend",col="steelblue"))
+library(lattice)
+xyplot(steps~interval | weekday, data=activity.interval.w,layout=c(1,2),type="l",col="steelblue")
 
 ```
 
